--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-router-dom": "^6.30.1",
     "rehype-raw": "^7.0.0",
     "simplex-noise": "^4.0.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
