--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "start": "vite preview --host 0.0.0.0 --port $PORT"
+    "start": "node server.js",
+    "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -43,7 +44,8 @@
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
