--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,11 @@
 services:
   - type: web
     name: futureal
-    env: static
+    env: node
     buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+    startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: VITE_BACKEND_URL
+        value: https://navmanch-backend.onrender.com
