--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,14 @@
 services:
   - type: web
     name: futureal
-    env: node
+    env: static
     buildCommand: npm install && npm run build
-    startCommand: npm start
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: VITE_BACKEND_URL
-        value: https://navmanch-backend.onrender.com
+    staticPublishPath: ./dist
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
